--- a/PyCitySchools/PyCitySchoolsRG.ipynb
+++ b/PyCitySchools/PyCitySchoolsRG.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "15"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "39170"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "24649428"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +396,8 @@
        "      <td>$24,649,428.00</td>\n",
        "      <td>78.985371</td>\n",
        "      <td>81.87784</td>\n",
-       "      <td>29370</td>\n",
-       "      <td>25528</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
        "      <td>65.172326</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -409,10 +409,10 @@
        "0             15         39,170  $24,649,428.00           78.985371   \n",
        "\n",
        "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
-       "0               81.87784           29370              25528          65.172326  "
+       "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,8 +425,8 @@
     "    \"Total Budget\":[total_budget],\n",
     "    \"Average Math Score\":[average_math_score],\n",
     "    \"Average Reading Score\":[average_reading_score],\n",
-    "    \"% Passing Math\":[passing_math_count],\n",
-    "    \"% Passing Reading\":[passing_math_reading_count],\n",
+    "    \"% Passing Math\":[passing_math_percentage],\n",
+    "    \"% Passing Reading\":[passing_reading_percentage],\n",
     "    \"% Overall Passing\":[overall_passing_rate]\n",
     "})\n",
     "\n",
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "[29370 rows x 11 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
        "[33610 rows x 11 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "[25528 rows x 11 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
        "Wright High School             83.955000          90.333333  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 127,
    "metadata": {
     "scrolled": true
    },
@@ -1860,7 +1860,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2026,7 @@
        "Johnson High School            80.966394          53.539172  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2449,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2470,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -2811,7 +2811,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2824,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2838,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2937,7 +2937,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2965,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2976,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -3317,7 +3317,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,7 +3346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 139,
    "metadata": {
     "scrolled": true
    },
@@ -3430,7 +3430,7 @@
        "Large (2000-5000)           81.344493          58.286003  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3459,7 +3459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3473,7 +3473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
        "District             80.966636          53.672208  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
