--- a/PyCitySchools/PyCitySchoolsRG.ipynb
+++ b/PyCitySchools/PyCitySchoolsRG.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 910,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 910,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "\n",
-    "# File to Load (Remember to Change These)\n",
+    "# File to Load\n",
     "school_data_to_load = Path(\"Resources/schools_complete.csv\")\n",
     "student_data_to_load = Path(\"Resources/students_complete.csv\")\n",
     "\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 911,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "15"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 911,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 912,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "39170"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 912,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 913,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "24649428"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 913,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 914,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 914,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 915,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 915,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 916,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 916,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 917,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 917,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 918,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 918,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 919,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 919,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 920,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 920,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 921,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 921,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 922,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 922,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 923,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 923,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 924,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "[29370 rows x 11 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 924,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 925,
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
        "[33610 rows x 11 columns]"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 925,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 926,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "[25528 rows x 11 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 926,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 927,
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1355,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 927,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 928,
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
        "Wright High School             83.955000          90.333333  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 928,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 929,
    "metadata": {
     "scrolled": true
    },
@@ -1860,7 +1860,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 929,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 930,
    "metadata": {},
    "outputs": [
     {
@@ -2026,7 +2026,7 @@
        "Johnson High School            80.966394          53.539172  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 930,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 931,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2205,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 931,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2247,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 932,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 932,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2449,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 933,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 934,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2470,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 935,
    "metadata": {},
    "outputs": [
     {
@@ -2811,7 +2811,7 @@
        "Wright High School                            <$585  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 935,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2824,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 936,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2838,7 +2838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 937,
    "metadata": {},
    "outputs": [
     {
@@ -2937,7 +2937,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 937,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2965,7 +2965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 938,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2976,7 +2976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 939,
    "metadata": {},
    "outputs": [
     {
@@ -3317,7 +3317,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 939,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3332,7 +3332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 940,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,7 +3346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 941,
    "metadata": {
     "scrolled": true
    },
@@ -3430,7 +3430,7 @@
        "Large (2000-5000)           81.344493          58.286003  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 941,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3459,7 +3459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 942,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3473,7 +3473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 943,
    "metadata": {},
    "outputs": [
     {
@@ -3545,7 +3545,7 @@
        "District             80.966636          53.672208  "
       ]
      },
-     "execution_count": 141,
+     "execution_count": 943,
      "metadata": {},
      "output_type": "execute_result"
     }
